Closed Bug 149685 Opened 23 years ago Closed 23 years ago

onsubmit event not being fired when you hit enter on a single-textfield form

Categories

(Core :: DOM: Core & HTML, defect)

x86
All
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: john, Assigned: john)

References

()

Details

Attachments

(1 file)

When you hit enter on a form with just one textfield, the onSubmit event is not being fired. Case in point is the Netscape-internal address above. Enter an email in the top and nothing happens currently. Something should happen.
Attached patch PatchSplinter Review
This patch makes us fire onSubmit on the form element instead of calling Submit().
Status: NEW → ASSIGNED
Comment on attachment 86675 [details] [diff] [review] Patch sr=jst
Attachment #86675 - Flags: superreview+
*** Bug 149677 has been marked as a duplicate of this bug. ***
Severity: normal → major
Attachment #86675 - Flags: review+
We need this regressions fixed for 1.1alpha. Please land this ASAP. Thanks.
Blocks: 1.1a
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Blocks: 125578
verifying build 2002-06-12-08-trunk
Status: RESOLVED → VERIFIED
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: