Fire onSubmit event when enter pressed in no-submit-button forms (bug 149685).  r=peterv, sr=jst, a=asa